--- a/Motherload/Motherload.vcxproj.filters
+++ b/Motherload/Motherload.vcxproj.filters
@@ -59,6 +59,9 @@
     <ClInclude Include="Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="minerals.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\dirt.png">
