--- a/Motherload/Motherload.vcxproj
+++ b/Motherload/Motherload.vcxproj
@@ -88,11 +88,11 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Dev\Motherload\libs\SDL2_ttf\include;C:\Dev\Motherload\libs\SDL2_image\include;C:\Dev\Motherload\libs\SDL2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Dev\sqlite-amalgamation-3270100;C:\Dev\Motherload\libs\SDL2_ttf\include;C:\Dev\Motherload\libs\SDL2_image\include;C:\Dev\Motherload\libs\SDL2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>C:\Dev\Motherload\libs\SDL2_ttf\lib\x64;C:\Dev\Motherload\libs\SDL2_image\lib\x64;C:\Dev\Motherload\libs\SDL2\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Dev\sqlite-amalgamation-3270100;C:\Dev\Motherload\libs\SDL2_ttf\lib\x64;C:\Dev\Motherload\libs\SDL2_image\lib\x64;C:\Dev\Motherload\libs\SDL2\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;sqlite3.lib;SDL2_image.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
