--- a/Motherload/Motherload.vcxproj
+++ b/Motherload/Motherload.vcxproj
@@ -132,6 +132,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Collision.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Map.cpp" />
@@ -148,10 +149,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Collision.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="Mineral.h" />
-    <ClInclude Include="minerals.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="StaticVars.h" />
     <ClInclude Include="TextureManager.h" />
