Model system implementation(not yet fully done): Execute file queries, string queries(also outputs the result to console);

--- a/Motherload/Motherload.vcxproj
+++ b/Motherload/Motherload.vcxproj
@@ -137,6 +137,8 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Mineral.cpp" />
+    <ClCompile Include="Models.cpp" />
+    <ClCompile Include="models\MineralModel.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="TextureManager.cpp" />
     <ClCompile Include="TextureObject.cpp" />
@@ -153,6 +155,8 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="Mineral.h" />
+    <ClInclude Include="Models.h" />
+    <ClInclude Include="models\MineralModel.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="StaticVars.h" />
     <ClInclude Include="TextureManager.h" />
