--- a/Motherload/Motherload.vcxproj.filters
+++ b/Motherload/Motherload.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="Shop.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Mining.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Map.h">
@@ -96,6 +99,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Shop.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Mining.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
