PlayerModel, getInventory function start working (There was a bug, of cyclic dependence); gameState bug fix implementet (halt the game after exit the building)

--- a/Motherload/Motherload.vcxproj
+++ b/Motherload/Motherload.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Mineral.cpp" />
     <ClCompile Include="Mining.cpp" />
+    <ClCompile Include="ModelObjects.cpp" />
     <ClCompile Include="Models.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Shop.cpp" />
